changed bug on button to change icon was out of place when filtering pokemon

--- a/src/components/PokemonPopulate/PokemonPopulate.css
+++ b/src/components/PokemonPopulate/PokemonPopulate.css
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: center;
     height: 56vh;
+    padding-top: 20px;
     gap: 20px;
     position: relative;
 }
@@ -44,6 +45,7 @@
     cursor: pointer;
     position: absolute;
     right: 0;
+    top: 0;
 }
 
 .pokeballChangeSprites:hover {
